<resources>
    <string name="app_name">Informació Granollers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Ubicacio_Atarasi"><a href="https://www.google.com/maps/place/Restaurant+Atarasii/@41.6098489,2.2872166,17z/data=!3m1!4b1!4m5!3m4!1s0x12a4c75e807f0365:0x48b5c16f2eb91816!8m2!3d41.6098489!4d2.2894053?hl=ca">Ubicacio Atarasi</a></string>
    <string name="Ubicacio_Wagaya"><a href="https://www.google.com/maps/place/Wagaya+Restaurante/@41.6101948,2.2887805,17z/data=!3m1!4b1!4m5!3m4!1s0x12a4c7cfba6d74c5:0x179bfb3cc7202a6a!8m2!3d41.6101966!4d2.2909512">Ubicacio Wagaya</a></string>
    <string name="Ubicacio_solNaixent"><a href="https://www.google.com/maps/dir//Restaurant+Sol+Naixent+Xin%C3%A8s/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x12a4c7c423a098d7:0x1056258561fbdae7?sa=X&amp;ved=2ahUKEwiS2qvo95v7AhUGQRoKHd_aChwQ9Rd6BAhdEAU">Ubicacio Sol Naixent</a></string>
    <string name="Ubicacio_nuevoPekin"><a href="https://www.google.com/maps/dir//Restaurant+Sol+Naixent+Xin%C3%A8s/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x12a4c7c423a098d7:0x1056258561fbdae7?sa=X&amp;ved=2ahUKEwiS2qvo95v7AhUGQRoKHd_aChwQ9Rd6BAhdEAU">Ubicacio Nuevo Pekin</a></string>
    <string name="Ubicacio_burger"><a href="https://www.google.com/maps/dir/41.6083351,2.2925922/Burger+King,+Carrer+de+Llu%C3%ADs+Companys,+41,+08401+Granollers,+Barcelona/@41.602163,2.2789353,15z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x12a4c79543078203:0x27494bf52b4da2d9!2m2!1d2.2825075!2d41.5972358">Ubicacio Burger King</a></string>
    <string name="Ubicacio_kfc"><a href="https://www.google.com/maps/dir//KFC,+Carrer+Matagalls,+5,+08402+Granollers,+Barcelona/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x12a4c7efa679b0d9:0x7baff386521f0050?sa=X&amp;ved=2ahUKEwjazprslKL7AhUiyYUKHVpVD0gQ48ADegQIARAd">Ubicacio KFC</a></string>
    <string name="Ubicacio_tagliatella"><a href="https://www.google.com/maps?lqi=CiFyZXN0YXVyYW50ZXMgaXRhbGlhbm9zIGdyYW5vbGxlcnNIzJv5zOWAgIAIWjcQABABEAIYABgBGAIiIXJlc3RhdXJhbnRlcyBpdGFsaWFub3MgZ3Jhbm9sbGVycyoGCAMQABABkgESaXRhbGlhbl9yZXN0YXVyYW50mgEkQ2hkRFNVaE5NRzluUzBWSlEwRm5TVU00WDJFMlkzRm5SUkFCqgEpCgkvbS8wOXkyazIQASoaIhZyZXN0YXVyYW50ZXMgaXRhbGlhbm9zKA4&amp;phdesc=9VKadKA9ces&amp;vet=12ahUKEwiPutPVmKL7AhVI-aQKHWx9CtYQ8UF6BAgDEFw..i&amp;lei=sC9sY4-iNsjykwXs-qmwDQ&amp;cs=1&amp;um=1&amp;ie=UTF-8&amp;fb=1&amp;gl=es&amp;sa=X&amp;geocode=KX-5mv3Ox6QSMelIxbOyFgGO&amp;daddr=Carrer+de+Joan+Prim,+42,+08400+Granollers,+Barcelona">Ubicacio Tagliatella</a></string>
    <string name="Ubicacio_mcdonalds"><a href="https://www.google.com/maps/dir/41.6083351,2.2925922/McDonald's,+Ronda+Sur,+S%2FN,+08402+Granollers,+Barcelona/@41.602163,2.2789353,15z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x12a4c7a046840ee5:0x3d7125fcc76b7f17!2m2!1d2.283154!2d41.5971713?hl=es">Ubicacio McDonalds</a></string>
    <string name="Ubicacio_ilsapore"><a href="https://www.google.com/maps/place/Il+Sapore+Italiano/@41.6116014,2.28421,17z/data=!3m1!4b1!4m5!3m4!1s0x12a4c7c922ad7c13:0x4978bc8109f0e496!8m2!3d41.6115841!4d2.286472">Ubicacio Il Sapore</a></string>
    <string name="Ubicacio_elitaliano"><a href="https://www.google.com/maps?q=el+italiano+granollers&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwi2k8eJnqL7AhX0_7sIHbp8AgkQ_AUoAXoECAEQAw">Ubicacio El Italiano</a></string>
    <string name="Ubicacio_lamezzaluna"><a href="https://www.google.com/maps?q=la+mezzaluna+granollers&amp;source=lmns&amp;bih=877&amp;biw=1920&amp;hl=es&amp;sa=X&amp;ved=2ahUKEwiXsuz-nqL7AhUSixoKHZXmB98Q_AUoA3oECAEQAw">Ubicacio La mezza luna</a></string>
    <string name="Ubicacio_Liceu"><a href="https://www.google.com/maps/place/Autoescola+Liceu/@41.6092448,2.2813504,17z/data=!3m1!4b1!4m5!3m4!1s0x12a4c7c88a0304ef:0x152b22a420e56f5!8m2!3d41.6092504!4d2.2834579">Ubicacio Liceu</a></string>
    <string name="Ubicacio_HoyVoy"><a href="https://www.google.com/maps/place/hoy-voy+Autoescuela/@41.6051669,2.2885389,17z/data=!3m1!4b1!4m5!3m4!1s0x12a4c7c4f02c468d:0xc88f9f526c4bc677!8m2!3d41.6051669!4d2.2907276?hl=es">Ubicacio Hoy-Voy</a></string>
    <string name="Ubicacio_Soy18"><a href="https://www.google.com/maps/place/Autoescuela+SOY18+Granollers/@41.6026207,2.2853699,17z/data=!3m1!4b1!4m5!3m4!1s0x12a4c74414bbb793:0xd8f2fa7397fe78f8!8m2!3d41.6026136!4d2.2876225?hl=es">Ubicacio Soy18</a></string>
    <string name="Ubicacio_AutoescolaGranollers"><a href="https://www.google.com/maps/place/Autoescola+Granollers/@41.615823,2.290997,15z/data=!4m5!3m4!1s0x0:0x121351c3bb3e5ea5!8m2!3d41.6158217!4d2.2910052?hl=es-ES">Ubicacio Autoescola Granollers</a></string>
    <string name="Ubicacio_CNGranollers"><a href="https://www.google.com/maps/place/Club+Nataci%C3%B3+Granollers/@41.600762,2.2803173,17z/data=!3m1!4b1!4m5!3m4!1s0x12a4c7bff0a278bd:0x841e0b09728c6dfb!8m2!3d41.600762!4d2.282506">Ubicacio CNGranollers</a></string>
    <string name="Ubicacio_anytimefitness"><a href="https://www.google.com/maps/place/Anytime+Fitness+Granollers/@41.6054699,2.2832676,17z/data=!3m1!4b1!4m5!3m4!1s0x12a4c7c6fe9c11ab:0xf95ecc7c87f3674e!8m2!3d41.6054699!4d2.2854563?hl=es">Ubicacio Anytime Fitness</a></string>
    <string name="Ubicacio_palacefitness"><a href="https://www.google.com/maps/place/Palace+Fitness/@41.6041999,2.2924506,17z/data=!3m1!4b1!4m5!3m4!1s0x12a4c70b004276cf:0xba74b39e8c50f453!8m2!3d41.6041999!4d2.2946393">Ubicacio Palace Fitness</a></string>
    <string name="Ubicacio_aduho"><a href="https://www.google.com/maps/place/ADUHO+GRANOLLERS/@41.6100523,2.2810708,17z/data=!3m1!4b1!4m5!3m4!1s0x12a4c7c824b62215:0x212755fc3b89fdd6!8m2!3d41.6100523!4d2.2832595">Ubicacio Aduho</a></string>
    <string name="Ubicacio_elsalon"><a href="https://www.google.com/maps/place/EL+SAL%C3%93N+Estilistes/@41.613497,2.2885353,17z/data=!3m1!4b1!4m5!3m4!1s0x12a4c7cdd7840073:0x5ee57e9cbb501c6d!8m2!3d41.613497!4d2.290724?hl=es">Ubicacio El Salon Estilistes</a></string>
    <string name="Ubicacio_urbanbeauty"><a href="https://www.google.com/maps/place/URBAN+BEAUTY+PELUQUERIA+GRANOLLERS/@41.6062302,2.2875734,17z/data=!3m1!4b1!4m5!3m4!1s0x12a4c7c5d305bf23:0x3dace3dd04945ced!8m2!3d41.6062302!4d2.2897621?hl=es">Ubicacio Urban Beauty</a></string>
    <string name="Ubicacio_elsot"><a href="https://www.google.com/maps?q=parquing+el+sot+granollers&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwiJm7_qmcD7AhVXU6QEHZKgDWAQ_AUoAXoECAIQAw">Ubicació El Sot</a></string>
    <string name="Ubicacio_corona"><a href="https://www.google.com/maps?q=Parking+Corona+(Grup+PBlaus)&amp;um=1&amp;ie=UTF-8&amp;sa=X&amp;ved=2ahUKEwjfte6qm8D7AhVhVqQEHcFPCQsQ_AUoAXoECAEQAw">Ubicacio Corona Parquing</a></string>
    <string name="Ubicacio_atenea"><a href="https://www.google.com/maps/place/Parking+Estacio+Atenea+(Pblaus)/@41.600203,2.285972,17z/data=!3m1!4b1!4m5!3m4!1s0x12a4c7c224ec36b9:0x3fc8c61c3b78f277!8m2!3d41.600203!4d2.2881607">Ubicacio Atenea </a></string>
    <string name="benvinguda">Benvinguts Granollerins!!</string>
    <string name="trens">Aquí podreu veure els horaris dels trens</string>
    <string name="autobusos">Aquí podreu veure els horaris dels autobusos</string>
</resources>