<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".parking"
    android:orientation="vertical"
    >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        >

        <ImageView
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:id="@+id/elsotImagen"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/mcdonals" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Parquing El Sot"
            android:fontFamily="monospace"
            android:textSize="22dp"
            android:layout_toRightOf="@+id/elsotImagen"
            android:id="@+id/elsottitle"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Telefono: 938 709 150"
            android:fontFamily="monospace"
            android:textSize="10dp"
            android:id="@+id/elsotTelef"
            android:layout_toRightOf="@id/elsotImagen"
            android:layout_below="@+id/elsottitle"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ubicacio_elsot"
            android:fontFamily="monospace"
            android:textSize="10dp"
            android:id="@+id/elsotMap"
            android:layout_toRightOf="@id/elsotImagen"
            android:layout_below="@+id/elsotTelef"/>

    </RelativeLayout>
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <ImageView
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:id="@+id/coronaImagen"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/burger"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Parquing Corona"
            android:fontFamily="monospace"
            android:textSize="22dp"
            android:layout_toRightOf="@+id/coronaImagen"
            android:id="@+id/coronaTitle"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Telefono: 938 606 690"
            android:fontFamily="monospace"
            android:textSize="10dp"
            android:id="@+id/coronaTelef"
            android:layout_toRightOf="@id/coronaImagen"
            android:layout_below="@+id/coronaTitle"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ubicacio_corona"
            android:fontFamily="monospace"
            android:textSize="10dp"
            android:id="@+id/coronaMap"
            android:layout_toRightOf="@id/coronaImagen"
            android:layout_below="@+id/coronaTelef"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <ImageView
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:id="@+id/ateneaImagen"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/kfc"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Parquing Estacio Atenea"
            android:fontFamily="monospace"
            android:textSize="22dp"
            android:layout_toRightOf="@+id/ateneaImagen"
            android:id="@+id/ateneatitle"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Telefono: 618 463 836"
            android:fontFamily="monospace"
            android:textSize="10dp"
            android:id="@+id/ateneaTelef"
            android:layout_toRightOf="@id/ateneaImagen"
            android:layout_below="@+id/ateneatitle"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ubicacio_atenea"
            android:fontFamily="monospace"
            android:textSize="10dp"
            android:id="@+id/kfcMap"
            android:layout_toRightOf="@id/ateneaImagen"
            android:layout_below="@+id/ateneaTelef"/>
    </RelativeLayout>

</LinearLayout>
</ScrollView>